<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login_as_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_client_btn" />

    <Button
        android:id="@+id/btn_login_as_barber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_barber_btn" />

    <Button
        android:id="@+id/btn_welcome_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login_btn" />

    <Button
        android:id="@+id/btn_welcome_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_signup_btn" />

</LinearLayout>